--- a/src/assets/stylesheets/contact.scss
+++ b/src/assets/stylesheets/contact.scss
@@ -1,6 +1,6 @@
-.LinkNav {
+.contact {
   font-size: 62.5%;
-  border: 5px solid gold;
+  border: 5px solid blueviolet;
 
   * {
     font-size: 1.2em;
