--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -1,15 +1,30 @@
-footer{
-    border: 3px solid red; 
-    width: 120vw;
-    height: 150vh;
-    *{
-        font-size: 1.2em;
-        padding:0;
-        margin:0;
-        box-sizing: border-box;
+footer {
+  font-size: 62.5%;
+  border: 3px solid red;
+  justify-content: center;
+  text-align: center;
+  text-align: left;
+  margin: 2%;
+
+  div:nth-child(1) {
+    display: flex;
+    border: 5px solid pink;
+    max-width: 100%;
+
+    p {
+      width: 50%;
+      display: flex;
+      text-align: left;
     }
-    img{
-        width: 42vw;
-        height: 30vh;
+    img {
+      width: 50%;
+      padding: 5% 2%;
     }
+  }
+  .copyrightNav {
+    display: flex;
+  }
+  li {
+    font-size: 1.2em;
+  }
 }
