--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -9,4 +9,12 @@
     box-sizing: border-box;
     list-style: none;
   }
+
+  .burgerMenu > div {
+    height: 3px;
+    width: 23px;
+    border-radius: 2px;
+    background-color: black;
+    margin-top: 3px;
+  }
 }
