--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -8,8 +8,7 @@
   border: 5px solid gold;
   display: flex;
   justify-content: space-between;
-  height: 151px; // à enlever quand il y' aura le header
-
+  height: 151px; // à enlever quand il y' aura le headerd
   * {
     font-size: 1.2em;
     padding: 0;
