--- a/src/assets/stylesheets/actuality.scss
+++ b/src/assets/stylesheets/actuality.scss
@@ -26,17 +26,116 @@
 }    
     
 .actuality {
+  margin:2%;
   display: flex;
-
-  .img {
-    max-width: 45%;
-    border: 5px solid blue;
-    border-radius: 4px;
-    padding: 5px;
-    
-  }
+  flex-direction: column;
+  border: 4px solid red;
+  font-size: 62.5%;
+  position :relative;
+  align-items: center;
+  justify-content: space-evenly;
+  box-sizing:border-box;
   
-  h2 {
-     font-style: "Quicksand";
+  section{
+    text-align: center;
+    max-width: 85vw;
+    border-bottom: 2px solid ;
+    h1{
+      font-size: 1rem;
+    }
+    h2{
+      font-weight:300;
+      font-style: "Quicksand";
+      padding-bottom:10%;
+    }
+    .span{
+      
+    }
   }
+  figure{
+    display: flex;
+    flex-direction: column;
+    .imgcard {
+      left:9%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+      max-width: 80%;
+      max-height: 80%;
+      min-height:60vh;
+      top: 10%;
+      border-radius: 4px;
+      padding: 5px; 
+      background-image:url("../../assets/images/taylor.jpg");
+    }
+    a{
+      z-index: 3;
+      left: 54%;
+      top: 7%;
+      position: absolute;
+      background-color: #D99827;
+      opacity: 45%;
+      text-decoration: none;
+      color:white;
+      font-size: 1.2rem;
+      padding: 7px 20px;
+  &:hover{
+    opacity: 99%;
+  }
+    }
+    figcaption{
+      position: absolute;
+      z-index: 4;
+      color:white;
+      border:4px solid green;
+      left: 25%;
+      top: 27%;
+    }
+  } h3,p,button{
+    text-align:center;
+    align-items: center;
+  }
+    h3{
+      color:#004AAD;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+    p{
+      font-weight:600;
+    }
+    button{
+      background: none;
+      color: inherit;
+      border: none;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
+      color:#356178;
+      font-size: 0.8rem;
+    }
+    .figcaption2{
+      z-index: 4;
+      position: absolute;
+      left: 25%;
+      top: 27%;
+      
+    }
+    .a2{
+      z-index: 4;
+    }
+    .figcaption3{
+      z-index: 4;
+      position: absolute;
+      left: 25%;
+      top: 27%;
+    }
+    .a3{
+      left: 2%;
+      top: 2%;
+      z-index: 4;
+    }
 }
+
