--- a/src/assets/stylesheets/homepage.scss
+++ b/src/assets/stylesheets/homepage.scss
@@ -1,17 +1,17 @@
 .homepage {
   font-size: 62.5%;
-  z-index: 0;
-  position: static;
+ 
 
   * {
     font-size: 1.2em;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    
   }
 }
 .flex {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
