style in progress

--- a/src/assets/stylesheets/actuality.css
+++ b/src/assets/stylesheets/actuality.css
@@ -23,7 +23,7 @@
 .actuality section {
   text-align: center;
   max-width: 85vw;
-  border-bottom: 2px solid;
+  background-color: green;
 }
 
 .actuality section h1 {
@@ -34,6 +34,13 @@
   font-weight: 300;
   font-style: "Quicksand";
   padding-bottom: 10%;
+}
+
+.actuality section .span {
+  color: blue;
+  width: 80%;
+  height: 5%;
+  border: 15px red solid;
 }
 
 .actuality figure {
@@ -71,8 +78,8 @@
 
 .actuality figure a {
   z-index: 3;
-  left: 54%;
-  top: 7%;
+  left: 58%;
+  top: 6%;
   position: absolute;
   background-color: #D99827;
   opacity: 45%;
@@ -84,6 +91,10 @@
 
 .actuality figure a:hover {
   opacity: 99%;
+}
+
+.actuality figure a em {
+  color: #D99827;
 }
 
 .actuality figure figcaption {
@@ -127,10 +138,12 @@
   z-index: 4;
   position: absolute;
   left: 25%;
-  top: 27%;
+  top: 60%;
 }
 
 .actuality .a2 {
+  left: 46%;
+  top: 70%;
   z-index: 4;
 }
 
@@ -138,12 +151,12 @@
   z-index: 4;
   position: absolute;
   left: 25%;
-  top: 27%;
+  top: 93%;
 }
 
 .actuality .a3 {
-  left: 2%;
-  top: 2%;
+  left: 58%;
+  top: 38%;
   z-index: 4;
 }
 /*# sourceMappingURL=actuality.css.map */
