--- a/src/assets/stylesheets/footer.css
+++ b/src/assets/stylesheets/footer.css
@@ -1,12 +1,12 @@
 footer {
   font-size: 62.5%;
-  border: 3px solid red;
+  border: 3px solid blue;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
   text-align: left;
   margin: 2%;
+  background: pink;
 }
 
 footer div:nth-child(1) {
@@ -36,6 +36,10 @@ footer .copyrightNav {
 }
 
 footer li {
-  font-size: 1.2em;
+  font-size: 1.4rem;
+}
+
+footer .Nav_links {
+  list-style-type: none;
 }
 /*# sourceMappingURL=footer.css.map */
