--- a/src/assets/stylesheets/homepage.css
+++ b/src/assets/stylesheets/homepage.css
@@ -1,15 +1,13 @@
 .homepage {
   font-size: 62.5%;
-  z-index: 0;
-  position: static;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .homepage * {
   font-size: 1.2em;
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .flex {
@@ -19,6 +17,10 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
