--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -5,34 +5,42 @@
 }
 .LinkNav {
   font-size: 62.5%;
-  border: 5px solid gold;
+  border: 5px solid rgb(252, 215, 8);
   display: flex;
-  justify-content: space-between;
   z-index: 10;
-  position: absolute;
-  margin: 10%;
-  width: 100%;
-  height: 100%;
-
-  * {
-    font-size: 1.2em;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  box-sizing:border-box;
+  justify-content: space-between;
+  top: 0 !important;
+  left:0 !important;
+  overflow:"hidden";
+  
+  .Nav_links{
     list-style: none;
+    display: flex;
+    
   }
 
   .burgerMenu {
+    border: 1px solid red;
+    margin:10px;
+    
+    
     // background-color: #f7efe9;
-    > div {
-      height: 2px;
-      width: 23px;
+    div {
+      min-height: 2px;
+      min-width: 23px;
       border-radius: 2px;
       background-color: black;
       margin-top: 3px;
       cursor: pointer;
+      
     }
   }
+  
+
 
   a:link {
     font-family: "Muli-Light";
