--- a/src/assets/stylesheets/homepage.css
+++ b/src/assets/stylesheets/homepage.css
@@ -25,4 +25,698 @@
       -ms-flex-align: center;
           align-items: center;
 }
+
+header .imgHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  max-width: 100%;
+  height: auto;
+  background-position: center;
+}
+
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"), url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"), url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
+.actuality {
+  margin: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 4px solid red;
+  font-size: 62.5%;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.actuality section {
+  text-align: center;
+  max-width: 85vw;
+  background-color: green;
+}
+
+.actuality section h1 {
+  font-size: 3em;
+}
+
+.actuality section h2 {
+  font-weight: 300;
+  font-family: "Quicksand-Regular";
+  color: #004AAD;
+  padding-bottom: 10%;
+}
+
+.actuality section .span {
+  color: blue;
+  width: 80%;
+  height: 5%;
+  border: 15px red solid;
+}
+
+.actuality figure {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.actuality figure .imgcard {
+  left: 9%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  position: relative;
+  z-index: 2;
+  max-width: 80%;
+  max-height: 80%;
+  min-height: 60vh;
+  top: 10%;
+  border-radius: 4px;
+  padding: 5px;
+  background-image: url("../../assets/images/taylor.jpg");
+}
+
+.actuality figure a {
+  z-index: 3;
+  left: 58%;
+  top: 6%;
+  position: absolute;
+  background-color: #D99827;
+  opacity: 45%;
+  text-decoration: none;
+  color: white;
+  font-size: 1.2em;
+  padding: 7px 20px;
+}
+
+.actuality figure a:hover {
+  opacity: 99%;
+}
+
+.actuality figure a em {
+  color: #D99827;
+}
+
+.actuality figure figcaption {
+  position: absolute;
+  z-index: 4;
+  color: white;
+  border: 4px solid green;
+  left: 25%;
+  top: 27%;
+  font-family: "Muli";
+}
+
+.actuality h3, .actuality p, .actuality button {
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.actuality h3 {
+  color: #004AAD;
+  font-weight: 600;
+  font-size: 1em;
+  font-family: "Quicksand-Regular";
+}
+
+.actuality .box button {
+  background: none;
+  color: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  color: #356178;
+  font-size: 0.8em;
+  font-family: "Muli-ExtraLight";
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+}
+
+.actuality article > p {
+  font-family: "Muli-ExtraLight";
+}
+
+.actuality p {
+  font-weight: 600;
+  font-family: "Muli-ExtraLight";
+}
+
+.actuality .figcaption2 {
+  z-index: 4;
+  position: absolute;
+  left: 25%;
+  top: 60%;
+}
+
+.actuality .a2 {
+  left: 46%;
+  top: 70%;
+  z-index: 4;
+}
+
+.actuality .figcaption3 {
+  z-index: 4;
+  position: absolute;
+  left: 25%;
+  top: 93%;
+}
+
+.actuality .a3 {
+  left: 58%;
+  top: 38%;
+  z-index: 4;
+}
+
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"), url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
+.video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 10;
+}
+
+.video h1 {
+  font-family: 'Muli';
+}
+
+.video h2 {
+  font-family: 'Muli-Bold';
+  color: #004aad;
+}
+
+.video span {
+  color: black;
+}
+
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"), url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf);
+}
+
+.testimony {
+  border-top: 1px solid black;
+  padding-top: 5%;
+  padding-left: 12%;
+}
+
+.testimony * {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.testimony h2 {
+  font-family: "Muli-ExtraLigth";
+  margin-right: 10%;
+  font-weight: 100;
+}
+
+.testimony h1 {
+  font-family: "Quicksand-Regular";
+  margin-right: 10%;
+  color: black !important;
+  margin-right: 10%;
+  margin-bottom: 10px;
+}
+
+.testimony .box {
+  padding-top: 2%;
+  width: 70vw;
+}
+
+.testimony .box h3, .testimony .box h4 {
+  font-weight: bold;
+  color: black !important;
+}
+
+.testimony .box h3 {
+  font-family: "Quicksand-Regular";
+}
+
+.testimony .box h4 {
+  margin-top: 5px;
+  font-family: "Quicksand-Regular";
+  font-weight: bold;
+}
+
+.testimony .box h5 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-family: "Quicksand-Light";
+}
+
+.testimony .box p {
+  font-family: "Quicksand-Regular";
+}
+
+.testimony .pink {
+  border-top: 1px solid black;
+}
+
+.testimony .pink h5 {
+  border-bottom: 1px solid #D140D6;
+  color: #D140D6;
+  padding-bottom: 2%;
+}
+
+.testimony .green h5 {
+  border-bottom: 1px solid #91C877;
+  color: #91C877;
+}
+
+.testimony .blue {
+  border-bottom: 1px solid black;
+  padding-bottom: 5%;
+}
+
+.testimony .blue h5 {
+  border-bottom: 1px solid #A2C2DF;
+  color: #A2C2DF;
+}
+
+.tagline {
+  color: blue;
+}
+
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"), url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"), url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
+.actuality {
+  margin: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 4px solid red;
+  font-size: 62.5%;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.actuality section {
+  text-align: center;
+  max-width: 85vw;
+  background-color: green;
+}
+
+.actuality section h1 {
+  font-size: 3em;
+}
+
+.actuality section h2 {
+  font-weight: 300;
+  font-family: "Quicksand-Regular";
+  color: #004AAD;
+  padding-bottom: 10%;
+}
+
+.actuality section .span {
+  color: blue;
+  width: 80%;
+  height: 5%;
+  border: 15px red solid;
+}
+
+.actuality figure {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.actuality figure .imgcard {
+  left: 9%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  position: relative;
+  z-index: 2;
+  max-width: 80%;
+  max-height: 80%;
+  min-height: 60vh;
+  top: 10%;
+  border-radius: 4px;
+  padding: 5px;
+  background-image: url("../../assets/images/taylor.jpg");
+}
+
+.actuality figure a {
+  z-index: 3;
+  left: 58%;
+  top: 6%;
+  position: absolute;
+  background-color: #D99827;
+  opacity: 45%;
+  text-decoration: none;
+  color: white;
+  font-size: 1.2em;
+  padding: 7px 20px;
+}
+
+.actuality figure a:hover {
+  opacity: 99%;
+}
+
+.actuality figure a em {
+  color: #D99827;
+}
+
+.actuality figure figcaption {
+  position: absolute;
+  z-index: 4;
+  color: white;
+  border: 4px solid green;
+  left: 25%;
+  top: 27%;
+  font-family: "Muli";
+}
+
+.actuality h3, .actuality p, .actuality button {
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.actuality h3 {
+  color: #004AAD;
+  font-weight: 600;
+  font-size: 1em;
+  font-family: "Quicksand-Regular";
+}
+
+.actuality .box button {
+  background: none;
+  color: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  color: #356178;
+  font-size: 0.8em;
+  font-family: "Muli-ExtraLight";
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+}
+
+.actuality article > p {
+  font-family: "Muli-ExtraLight";
+}
+
+.actuality p {
+  font-weight: 600;
+  font-family: "Muli-ExtraLight";
+}
+
+.actuality .figcaption2 {
+  z-index: 4;
+  position: absolute;
+  left: 25%;
+  top: 60%;
+}
+
+.actuality .a2 {
+  left: 46%;
+  top: 70%;
+  z-index: 4;
+}
+
+.actuality .figcaption3 {
+  z-index: 4;
+  position: absolute;
+  left: 25%;
+  top: 93%;
+}
+
+.actuality .a3 {
+  left: 58%;
+  top: 38%;
+  z-index: 4;
+}
+
+@font-face {
+  font-family: "Muli-Light";
+  src: local("MuliLight"), url(../../assets/fonts/muli/Muli-Light.ttf) format("truetype");
+}
+
+.LinkNav {
+  font-size: 62.5%;
+  border: 5px solid #fcd708;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 10;
+  position: fixed;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 0 !important;
+  left: 0 !important;
+  overflow: "hidden";
+}
+
+.LinkNav .Nav_links {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.LinkNav .burgerMenu {
+  border: 1px solid red;
+  margin: 10px;
+}
+
+.LinkNav .burgerMenu div {
+  min-height: 2px;
+  min-width: 23px;
+  border-radius: 2px;
+  background-color: black;
+  margin-top: 3px;
+  cursor: pointer;
+}
+
+.LinkNav a:link {
+  font-family: "Muli-Light";
+  text-decoration: none;
+  color: black;
+  font-size: 10px;
+}
+
+.LinkNav .Nav_links {
+  -webkit-transition: all 0.8s ease-out;
+  transition: all 0.8s ease-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"), url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"), url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+
+footer {
+  font-size: 62.5%;
+  border: 3px solid blue;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: left;
+  margin: 2%;
+  background: pink;
+}
+
+footer div:nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 5px solid pink;
+  max-width: 100%;
+}
+
+footer div:nth-child(1) p {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: left;
+  font-family: "Muli-ExtraLight";
+}
+
+footer div:nth-child(1) img {
+  width: 20%;
+}
+
+footer .copyrightNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .copyrightNav p {
+  font-family: "Muli-ExtraLight";
+}
+
+footer .copyrightNav p span {
+  font-family: "Muli-Bold";
+}
+
+footer li {
+  font-size: 1.4rem;
+}
+
+footer .Nav_links {
+  list-style-type: none;
+}
 /*# sourceMappingURL=homepage.css.map */
