--- a/src/assets/stylesheets/homepage.scss
+++ b/src/assets/stylesheets/homepage.scss
@@ -16,3 +16,633 @@
   flex-direction: column;
   align-items: center;
 }
+
+//HEADER
+header{
+  .imgHeader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 100%;
+    height: auto;  
+    background-position: center;
+  }
+}
+/// ACtuaclity
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"),
+    url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"),
+    url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"),
+    url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"),
+    url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
+@mixin display($justify-content){
+  display:flex;
+ flex-direction:column;
+ align-items:center;
+ justify-content:$justify-content;
+}    
+    
+.actuality {
+  margin:2%;
+  display: flex;
+  flex-direction: column;
+  border: 4px solid red;
+  font-size: 62.5%;
+  position :relative;
+  align-items: center;
+  justify-content: space-evenly;
+  box-sizing:border-box;
+  
+  section{
+    text-align: center;
+    max-width: 85vw;
+    background-color: green;
+    h1{
+      font-size: 3em;
+    }
+    h2{
+      font-weight:300;
+      font-family: "Quicksand-Regular";
+      color: #004AAD;
+      padding-bottom:10%;
+    }
+    .span{
+      color:blue;
+      width:80%;
+      height: 5%;
+      border: 15px red solid;   
+    }
+  }
+  figure{
+    display: flex;
+    flex-direction: column;
+    .imgcard {
+      left:9%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+      max-width: 80%;
+      max-height: 80%;
+      min-height:60vh;
+      top: 10%;
+      border-radius: 4px;
+      padding: 5px; 
+      background-image:url("../../assets/images/taylor.jpg");
+    }
+    a{
+      z-index: 3;
+      left: 58%;
+      top: 6%;
+      position: absolute;
+      background-color: #D99827;
+      opacity: 45%;
+      text-decoration: none;
+      color:white;
+      font-size: 1.2em;
+      padding: 7px 20px;
+  &:hover{
+    opacity: 99%;
+  }
+  em{
+    color:#D99827;
+  }
+    }
+    figcaption{
+      position: absolute;
+      z-index: 4;
+      color:white;
+      border:4px solid green;
+      left: 25%;
+      top: 27%;
+      font-family: "Muli";
+    }
+  } h3,p,button{
+    text-align:center;
+    align-items: center;
+    
+  }
+    h3{
+      color:#004AAD;
+      font-weight: 600;
+      font-size: 1em;
+      font-family: "Quicksand-Regular";
+    }
+    .box{
+
+      button{
+        background: none;
+        color: inherit;
+        border: none;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+        color:#356178;
+        font-size: 0.8em;
+        font-family: "Muli-ExtraLight";
+        align-items: left;
+      }
+
+    }
+    article>p{
+      font-family: "Muli-ExtraLight";
+   
+    }
+    p{
+      font-weight:600;
+      font-family: "Muli-ExtraLight";
+    }
+    .figcaption2{
+      z-index: 4;
+      position: absolute;
+      left: 25%;
+      top: 60%;
+      
+    }
+    .a2{
+      left: 46%;
+      top: 70%;
+      z-index: 4;
+      
+    }
+    .figcaption3{
+      z-index: 4;
+      position: absolute;
+      left: 25%;
+      top: 93%;
+      
+
+    }
+    .a3{
+      left: 58%;
+      top: 38%;
+      z-index: 4;
+    }
+}
+//////
+
+// VIDEO
+
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"),
+    url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"),
+    url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"),
+    url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+.video{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  flex-direction: column;
+  z-index: 10;
+  h1 {
+  font-family: 'Muli';
+  }
+  h2 {
+  font-family: 'Muli-Bold';
+  color: #004aad;
+  }
+iframe{
+}
+span{
+  
+  color:black;
+}
+}
+/////FIN VIDEO
+// TESTIMONY
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"),
+    url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"),
+    url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) ;
+}
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"),
+    url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) ;
+}
+
+.testimony{ 
+  border-top: 1px solid black; 
+  padding-top: 5%;
+  padding-left:12%;
+  *{  
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      box-sizing: border-box;
+      align-items: center;
+      justify-content: center;
+     
+  }
+  h2{
+      font-family: "Muli-ExtraLigth";
+      margin-right: 10%;
+      font-weight: 100;
+  }
+  h1{
+      font-family: "Quicksand-Regular";
+      margin-right: 10%;
+      color:black !important;
+      margin-right: 10%;
+      margin-bottom: 10px;
+  }
+  .box{
+      padding-top: 2%;
+      width: 70vw;
+      h3,h4{
+          font-weight:bold;
+          color:black !important;
+      }
+      h3{
+          font-family: "Quicksand-Regular",
+      }
+      h4{
+          margin-top: 5px;
+          font-family: "Quicksand-Regular";
+          font-weight: bold;
+      }
+      h5{
+          margin-top: 10px;
+          margin-bottom: 5px;
+          font-family: "Quicksand-Light",
+      }
+      p{
+        
+          font-family: "Quicksand-Regular";
+     
+      }
+  }
+  .pink{
+      border-top: 1px solid black; 
+      h5{ 
+          border-bottom: 1px solid #D140D6;
+          color:#D140D6;
+          padding-bottom: 2%;
+      }
+  }
+  .green{
+      h5{
+          border-bottom: 1px solid#91C877;
+          color:#91C877;
+      }
+     
+  }
+  .blue{
+      border-bottom: 1px solid black;
+      padding-bottom: 5%;
+      h5{
+          border-bottom: 1px solid #A2C2DF;
+          color:#A2C2DF;
+      }
+  }  
+}
+.tagline{
+color:blue;
+}
+///
+///contact
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"),
+    url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"),
+    url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"),
+    url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"),
+    url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
+@mixin display($justify-content){
+  display:flex;
+ flex-direction:column;
+ align-items:center;
+ justify-content:$justify-content;
+}    
+    
+.actuality {
+  margin:2%;
+  display: flex;
+  flex-direction: column;
+  border: 4px solid red;
+  font-size: 62.5%;
+  position :relative;
+  align-items: center;
+  justify-content: space-evenly;
+  box-sizing:border-box;
+  
+  section{
+    text-align: center;
+    max-width: 85vw;
+    background-color: green;
+    h1{
+      font-size: 3em;
+    }
+    h2{
+      font-weight:300;
+      font-family: "Quicksand-Regular";
+      color: #004AAD;
+      padding-bottom:10%;
+    }
+    .span{
+      color:blue;
+      width:80%;
+      height: 5%;
+      border: 15px red solid;   
+    }
+  }
+  figure{
+    display: flex;
+    flex-direction: column;
+    .imgcard {
+      left:9%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+      max-width: 80%;
+      max-height: 80%;
+      min-height:60vh;
+      top: 10%;
+      border-radius: 4px;
+      padding: 5px; 
+      background-image:url("../../assets/images/taylor.jpg");
+    }
+    a{
+      z-index: 3;
+      left: 58%;
+      top: 6%;
+      position: absolute;
+      background-color: #D99827;
+      opacity: 45%;
+      text-decoration: none;
+      color:white;
+      font-size: 1.2em;
+      padding: 7px 20px;
+  &:hover{
+    opacity: 99%;
+  }
+  em{
+    color:#D99827;
+  }
+    }
+    figcaption{
+      position: absolute;
+      z-index: 4;
+      color:white;
+      border:4px solid green;
+      left: 25%;
+      top: 27%;
+      font-family: "Muli";
+    }
+  } h3,p,button{
+    text-align:center;
+    align-items: center;
+    
+  }
+    h3{
+      color:#004AAD;
+      font-weight: 600;
+      font-size: 1em;
+      font-family: "Quicksand-Regular";
+    }
+    .box{
+
+      button{
+        background: none;
+        color: inherit;
+        border: none;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+        color:#356178;
+        font-size: 0.8em;
+        font-family: "Muli-ExtraLight";
+        align-items: left;
+      }
+
+    }
+    article>p{
+      font-family: "Muli-ExtraLight";
+   
+    }
+    p{
+      font-weight:600;
+      font-family: "Muli-ExtraLight";
+    }
+    .figcaption2{
+      z-index: 4;
+      position: absolute;
+      left: 25%;
+      top: 60%;
+      
+    }
+    .a2{
+      left: 46%;
+      top: 70%;
+      z-index: 4;
+      
+    }
+    .figcaption3{
+      z-index: 4;
+      position: absolute;
+      left: 25%;
+      top: 93%;
+      
+
+    }
+    .a3{
+      left: 58%;
+      top: 38%;
+      z-index: 4;
+    }
+}
+
+///////fin contact
+
+///nav
+@font-face {
+  font-family: "Muli-Light";
+  src: local("MuliLight"),
+    url(../../assets/fonts/muli/Muli-Light.ttf) format("truetype");
+}
+.LinkNav {
+  font-size: 62.5%;
+  border: 5px solid rgb(252, 215, 8);
+  display: flex;
+  z-index: 10;
+  position: fixed;
+  
+  box-sizing:border-box;
+  justify-content: space-between;
+  top: 0 !important;
+  left:0 !important;
+  overflow:"hidden";
+  
+  
+  .Nav_links{
+    list-style: none;
+    display: flex;
+    
+  }
+
+  .burgerMenu {
+    border: 1px solid red;
+    margin:10px;
+    
+    
+    // background-color: #f7efe9;
+    div {
+      min-height: 2px;
+      min-width: 23px;
+      border-radius: 2px;
+      background-color: black;
+      margin-top: 3px;
+      cursor: pointer;
+      
+    }
+  }
+  
+
+
+  a:link {
+    font-family: "Muli-Light";
+    text-decoration: none;
+    color: black;
+    font-size: 10px;
+  }
+
+  .Nav_links {
+    // background-color: #f7efe9;
+    transition: all 0.8s ease-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+// li:nth-child(1) {
+//   border: 3px solid brown;
+//   transition: all 1.1s ease-out;
+// }
+// li:nth-child(2) {
+//   border: 3px solid brown;
+//   transition: all 1.2s ease-out;
+// }
+// li:nth-child(3) {
+//   border: 3px solid brown;
+//   transition: all 1.3s ease-out;
+// }
+// nn li:nth-child(4) {
+//   border: 3px solid brown;
+//   transition: all 1.4s ease-out;
+// }
+// li:nth-child(5) {
+//   border: 3px solid brown;
+//   transition: all 1.5s ease-out;
+// }
+
+///////////fin nav
+
+//FOOTER
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"),
+    url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"),
+    url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+footer {
+  font-size: 62.5%;
+  border: 3px solid blue;
+  justify-content: center;
+  text-align: left;
+  margin: 2%;
+  background: pink;
+  
+
+  div:nth-child(1) {
+    display: flex;
+    border: 5px solid pink;
+    max-width: 100%;
+
+    p {
+      width: 50%;
+      display: flex;
+      text-align: left;
+      font-family: "Muli-ExtraLight";
+      
+    }
+    img {
+      width: 20%;
+    }
+  }
+  .copyrightNav {
+    display: flex;
+
+    p{
+      font-family: "Muli-ExtraLight";
+      span{
+
+        font-family: "Muli-Bold";
+
+      }
+    }
+  }
+  li {
+    font-size: 1.4rem;
+  }
+  .Nav_links{
+    list-style-type: none;
+  }
+}
+///
