--- a/src/assets/stylesheets/actuality.scss
+++ b/src/assets/stylesheets/actuality.scss
@@ -34,7 +34,7 @@
   font-size: 62.5%;
   position :relative;
   align-items: center;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
   box-sizing:border-box;
   
   section{
@@ -69,41 +69,71 @@
       position: relative;
       z-index: 2;
       max-width: 80%;
-      max-height: 80%;
-      min-height:60vh;
+      max-height: 60%;
       top: 10%;
       border-radius: 4px;
       padding: 5px; 
       background-image:url("../../assets/images/taylor.jpg");
     }
+    
+    .a2{
+      top: 70%;
+      color: red;
+    }
+    
+    .a3{
+      top: 38%;
+      color:blue;
+    }
     a{
-      z-index: 3;
-      left: 58%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      width: 20%;
+      height:1%;
+      z-index: 4;
+      left: 70%;
       top: 6%;
       position: absolute;
       background-color: #D99827;
-      opacity: 45%;
+      opacity: 70%;
       text-decoration: none;
       color:white;
       font-size: 1.2rem;
-      padding: 7px 20px;
-  &:hover{
-    opacity: 99%;
-  }
-  em{
-    color:#D99827;
-  }
+      cursor: pointer;
+      &:hover{
+      opacity: 99%;
+      }
+      em{
+      color:#D99827;
+      }
     }
     figcaption{
       position: absolute;
-      z-index: 4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 6;
       color:white;
       border:4px solid green;
-      left: 25%;
-      top: 27%;
+      left: 20%;
+      top: 22%;
+      width: 60%;
+      height:2%;
       font-family: "Muli";
+      text-align: center;
+      
     }
-  } h3,p,button{
+      .figcaption2{
+        top: 56%;
+      }
+      .figcaption3{
+        top: 88%;
+      }
+
+  } 
+  h3,p,button{
     text-align:center;
     align-items: center;
     
@@ -116,54 +146,68 @@
     }
     .box{
 
-      button{
-        background: none;
-        color: inherit;
-        border: none;
-        font: inherit;
-        cursor: pointer;
-        outline: inherit;
-        color:#356178;
-        font-size: 0.8rem;
-        font-family: "Muli-ExtraLight";
-        align-items: left;
-      }
-
+      
     }
+    .button2{
+      background: none;
+      color: inherit;
+      border: none;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
+      color:#356178;
+      font-size: 0.8rem;
+      font-family: "Muli-ExtraLight";
+      text-align: center;
+      border: 10px solid blueviolet;
+      position:relative;
+      width: 20%;
+      height:2%;
+      left: 40%;
+    }
+    .button3{
+      background: none;
+      color: inherit;
+      border: none;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
+      color:#356178;
+      font-size: 0.8rem;
+      font-family: "Muli-ExtraLight";
+      align-items: left;
+      border: 10px solid rgb(70, 43, 226);
+      left: 40%;
+      position:relative;
+      width: 20%;
+      height:2%;
+    }
+    .button1{
+      background: none;
+      color: inherit;
+      border: none;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
+      color:#356178;
+      font-size: 0.8rem;
+      font-family: "Muli-ExtraLight";
+      align-items: left;
+      border: 10px solid rgb(177, 226, 43);
+      left: 40%;
+      position:relative;
+      width: 20%;
+      height:2%;
+    }
+
     article>p{
       font-family: "Muli-ExtraLight";
-   
     }
     p{
       font-weight:600;
       font-family: "Muli-ExtraLight";
     }
-    .figcaption2{
-      z-index: 4;
-      position: absolute;
-      left: 25%;
-      top: 60%;
-      
-    }
-    .a2{
-      left: 46%;
-      top: 70%;
-      z-index: 4;
-      
-    }
-    .figcaption3{
-      z-index: 4;
-      position: absolute;
-      left: 25%;
-      top: 93%;
-      
-
-    }
-    .a3{
-      left: 58%;
-      top: 38%;
-      z-index: 4;
-    }
+    
 }
 
 
