--- a/src/assets/stylesheets/contact.scss
+++ b/src/assets/stylesheets/contact.scss
@@ -9,16 +9,16 @@
   min-width: 40%;
   // border: 5px solid blueviolet;
   font-family: "Muli-ExtraLight";
+  order:1;
   * {
-    font-size: 1.2em;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     list-style: none;
   }
-  
   ul{
-    width: 40vw;
+    font-size: 1.2em;
+    width: 40%;
     a{
       text-decoration: none;
       color: black;
@@ -26,3 +26,4 @@
   }
   
 }
+
