--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -1,3 +1,4 @@
+@import "./homepage.scss";
 @font-face {
   font-family: "Muli-Bold";
   src: local("MuliBold"),
@@ -10,44 +11,77 @@
 }
 footer {
   font-size: 62.5%;
-  border: 3px solid blue;
+  // border: 3px solid blue;
   justify-content: center;
   text-align: left;
-  margin: 4% 12%;
+  margin: 4% 6%;
   font-family: "Muli-ExtraLight" !important;
-  // font-family: "Muli-Bold";  
-
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+  }
+  // font-size:1.2em !important;
+  div{
+    max-width:100%;
+   
+  }
   div:nth-child(1) {
+
     display: flex;
     max-width: 100%;
-    border-bottom: 1px solid black;
     width: 70vw;
     padding-bottom: 4%;
+  // font-size:1.2em !important;
+    
     p {
-      width: 50%;
+      // font-size:1.2em;
+      width: 50vw;
       display: flex;
       text-align: left;
       padding-right: 3%;    
     }
     img {
-      width: 20%;
+      width: 30%;
+
     }
   }
-
-  .copyrightNav {
+  div:nth-child(2){
+    height:100%;
+    width:100%;
+    border-top: 1px solid black;
     display: flex;
-    width: 40vw;
-    flex-direction: column;
-    flex-direction: column;
-  }
-  .Nav_links {
-    padding-left:0;
-    width:90vw;
-    list-style-type: none;
-    a{
-      text-decoration: none;
-      color: black;
+    align-items: space-between;
+    box-sizing: border-box;
+    overflow: hidden;
+    padding: 2% 0%;
+    // font-size:1.2em !important;
+    .copyright{
+      width: 30%;
+      box-sizing: border-box;
+      height: 70%;
+      margin-right: 22%;
+    }
+    .Nav{
+      box-sizing: border-box;
+      height:100%;
+      padding-left:8%;
+      width:50%;
+      list-style-type: none;
+      // font-size:1.2em;
+
+      a{
+        // font-size:1.2em !important;
+        text-decoration: none;
+        color: black;
+      }  
+      
     }
     
+  }
+ 
+  li>link{
+    // font-size:1.2em !important;
   }
 }
