--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -28,12 +28,11 @@
       cursor: pointer;
     }
   }
-
   a {
     font-family: "Muli-Light";
     text-decoration: none;
     color: black;
-    font-size: 10px;
+    font-size: 1.5em;
   }
   .Links {
     transition: all 0.8s ease-out;
@@ -43,5 +42,11 @@
     align-items: center;
     list-style: none;
     border: 4px solid yellow;
+
+  }
+  .contacts a{
+
+    font-family: "Muli-Light";
+    font-size:1.5em !important;
   }
 }
