--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -1,91 +1,102 @@
 @font-face {
-    font-family: "Muli";
-    src: local("Muli"),
-      url(../../assets/fonts/muli/Muli.ttf) format("truetype");
-  }
-  @font-face {
-    font-family: "Quicksand-Regular";
-    src: local("QuicksandRegular"),
-      url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) ;
-  }
-  @font-face {
-    font-family: "Quicksand-Light";
-    src: local("QuicksandLight"),
-      url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) ;
-  }
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"),
+    url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
 
-.testimony{ 
-    border-top: 1px solid black; 
-    padding-top: 5%;
-    padding-left:12%;
-    *{  
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        box-sizing: border-box;
-        align-items: center;
-        justify-content: center;
-       
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"),
+    url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf);
+}
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"),
+    url(../../assets/fonts/Quicksand/Quicksand-Light.ttf);
+ }
+.testimony {
+  border-top: 1px solid black;
+  padding-top: 5%;
+  padding-left: 12%;
+  font-size: 62.5%;
+  * {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+  }
+  h2 {
+    font-family: "Roboto-Light";
+    margin-right: 10%;
+    font-weight: 100;
+    font-size:2em;
+  }
+  h1 {
+    font-family: "Roboto-Bold";
+    margin-right: 10%;
+    color: black !important;
+    margin-right: 10%;
+    margin-bottom: 10px;
+    font-size: 2.5em;
+  }
+  .box {
+    padding-top: 2%;
+    width: 70vw;
+    h3,
+    h4 {
+      font-weight: bold;
+      color: black !important;
     }
-    h2{
-        font-family: "Muli-ExtraLigth";
-        margin-right: 10%;
-        font-weight: 100;
+    h3 {
+      font-family: "Quicksand-Regular";
+      font-size: 2em;
     }
-    h1{
-        font-family: "Quicksand-Regular";
-        margin-right: 10%;
-        color:black !important;
-        margin-right: 10%;
-        margin-bottom: 10px;
+    h4 {
+      font-size: 1.5em;
+      margin-top: 5px;
+      font-family: "Muli-Bold";
+      font-weight: bold;
     }
-    .box{
-        padding-top: 2%;
-        width: 70vw;
-        h3,h4{
-            font-weight:bold;
-            color:black !important;
-        }
-        h3{
-            font-family: "Quicksand-Regular",
-        }
-        h4{
-            margin-top: 5px;
-            font-family: "Quicksand-Regular";
-            font-weight: bold;
-        }
-        h5{
-            margin-top: 10px;
-            margin-bottom: 5px;
-            font-family: "Quicksand-Light",
-        }
-        p{
-          
-            font-family: "Quicksand-Regular";
-       
-        }
+    h5 {
+      font-size: 1.5em;
+      margin-top: 10px;
+      margin-bottom: 5px;
+      font-family: "Quicksand-Light";
     }
-    .pink{
-        border-top: 1px solid black; 
-        h5{ 
-            border-bottom: 1px solid #D140D6;
-            color:#D140D6;
-            padding-bottom: 2%;
-        }
+    p {
+      font-size: 1.2em;
+      font-family: "Quicksand-Regular";
     }
-    .green{
-        h5{
-            border-bottom: 1px solid#91C877;
-            color:#91C877;
-        }
-       
+  }
+  .pink {
+    border-top: 1px solid black;
+    margin-bottom: 10%;
+    h5 {
+      border-bottom: 1px solid #d140d6;
+      color: #d140d6;
+      padding-bottom: 2%;
     }
-    .blue{
-        border-bottom: 1px solid black;
-        padding-bottom: 5%;
-        h5{
-            border-bottom: 1px solid #A2C2DF;
-            color:#A2C2DF;
-        }
-    }  
+  }
+  .green {
+      margin-bottom: 10%;
+    h5 {
+      border-bottom: 1px solid#91C877;
+      color: #91c877;
+    }
+  }
+  .blue {
+    margin-bottom: 10%;
+    border-bottom: 1px solid black;
+    padding-bottom: 10%;
+    h5 {
+      border-bottom: 1px solid #a2c2df;
+      color: #a2c2df;
+    }
+  }
 }
