--- a/src/assets/stylesheets/Video.scss
+++ b/src/assets/stylesheets/Video.scss
@@ -21,12 +21,18 @@
     align-items: center;
     flex-direction: column;
     position: relative;
+margin-top: 10%;
+    h1,h2{
+      font-size:15px;
+    }
     h1 {
     font-family: 'Muli';
     }
     h2 {
+
     font-family: 'Muli-Bold';
-    color: #004aad;
+    // color: #004aad;
+    color: #356178;
     }
 iframe{
   width:80vw;
