--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -41,7 +41,7 @@
     justify-content: center;
     align-items: center;
     list-style: none;
-    border: 4px solid yellow;
+    // border: 4px solid yellow;
 
   }
   .contacts a{
