--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -23,7 +23,7 @@
   margin-top: 14%;
   // padding-left: 12%;
   text-align: center;
-  font-size: 62.5%;
+  // font-size: 62.5%;
   * {
     display: flex;
     flex-direction: column;
@@ -48,7 +48,7 @@
     font-family: "Roboto-Light";
     // margin-right: 10%;
     font-weight: 100;
-    font-size:2.5em;
+    font-size:20px;
     text-align: center;
   }
   h1 {
@@ -57,34 +57,34 @@
     color: #D29E44 !important;
     // text-align: center;
     margin-bottom: 10px;
-    font-size: 2.5em;
+    font-size: 20px;
   }
   .box {
     padding-top: 2%;
     // width: 70vw;
     h3,
     h4 {
+      font-size:18px;
       font-weight: bold;
       color: black !important;
+     
     }
     h3 {
       font-family: "Quicksand-Regular";
-      font-size: 2em;
     }
-    h4 {
-      font-size: 2em;
+    h4 {   
       margin-top: 5px;
       font-family: "Muli-Bold";
       font-weight: bold;
     }
     h5 {
-      font-size: 2em;
+      font-size: 18px;
       margin-top: 10px;
       margin-bottom: 5px;
       font-family: "Quicksand-Light";
     }
     p {
-      font-size: 1.9em;
+      font-size: 16px;
       font-family: "Quicksand-Regular";
     }
   }
