--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -79,8 +79,8 @@
     }
     h5 {
       font-size: 18px;
-      margin-top: 10px;
-      margin-bottom: 5px;
+      margin-top: 2%;
+      margin-bottom: 5%;
       font-family: "Quicksand-Light";
     }
     p {
