--- a/src/assets/stylesheets/actuality.scss
+++ b/src/assets/stylesheets/actuality.scss
@@ -61,7 +61,6 @@
 
     h1 {
       margin-top: 10px;
-      // font-size: 1rem;
       // font-size: 2em;
       letter-spacing: 1px;
       font-family: "Roboto-Bold";
@@ -72,8 +71,7 @@
       font-weight: 300;
       font-family: "Roboto-Light";
       color: black;
-      padding-bottom: 10%;
-      
+      padding-bottom: 10%;  
       // font-size:1.8em;
     }
     .span {
@@ -86,8 +84,8 @@
   figure {
     display: flex;
     flex-direction: column;
-    
     // justify-content: space-around;
+
     .imgcard {
       display: flex;
       align-items: center;
@@ -98,19 +96,46 @@
       top: 10%;
       border-radius: 4px;
       padding: 5px;
+
+    }
+
+
+    .a3 {
+      top: 70.5%;
+      // color: red;
+      z-index: 3;
+      left: 62.8%;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      position: absolute;
+      background-color: #d99827;
+      opacity: 70%;
+      text-decoration: none;
+      color: white;
+      cursor: pointer;
+      padding: 2%;
+      box-shadow: 10px 5px #00000000;
     }
 
     .a2 {
-      top: 70.5%;
-      // color: red;
-      left: 45.8%;
-    }
-
-    .a3 {
       top: 39.3%;
       // color: blue;
+      left: 45.8%;
+      z-index: 4;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      position: absolute;
+      background-color: #d99827;
+      opacity: 70%;
+      text-decoration: none;
+      color: white;
+      cursor: pointer;
+      padding: 2%;
+      box-shadow: 10px 5px #00000000;
     }
-    a {
+    .a1 {
       // display: flex;
       // justify-content: center;
       // align-items: center;
@@ -120,9 +145,11 @@
       // max-width: 20%;
       // min-height: 1%;
       // min-height: 2vh;
+      // top: 8%;
+      left: 62.8%;
       top: 8%;
       z-index: 4;
-      left: 63%;
+      // left: 63%;
       margin-left: auto;
       margin-right: auto;
       text-align: center;
@@ -147,10 +174,12 @@
       z-index: 6;
       color: white;
       // border: 4px solid green;
-      left: 11%;
+      // left: 11%;
+      left: 10%;
+
       top: 27%;
       max-width:90%;
-      font-size:16px !important;
+      font-size:16px!important;
       // height: 2%;
       font-family: "Muli";
       text-align: center;
@@ -236,4 +265,72 @@
     position: relative;
     height: 2%;
   }
+
+  @media(width:280px){
+    .a1,.a3{
+      left: 67%!important;
+    }
+    figcaption{
+      left: 6.5%!important;
+      font-size:12px!important;
+      width:90%!important;
+    } 
+    p{
+      font-size:14px!important;
+      
+    }
+  }
+  @media(min-width:360px){
+    .a1,.a3{
+      left: 60.9%!important;
+    }
+    figcaption{
+      left: 16%!important;
+    }  
+  }
+  @media(min-width:375px){
+    // .a1,.a3{
+    //   left: 60.9%!important;
+    // }
+    figcaption{
+      left: 17%!important;
+    }  
+  }
+// PIXEL 2XL
+  @media(min-width:411px){
+    .a1,.a3{
+      left: 59.2%!important;
+    }
+    figcaption{
+      left: 19.5%!important;
+    } 
+    h1,h2{
+      font-size:20px!important;
+    }
+  }
+  // SURFACE DUO
+  @media(min-width:540px){
+    .a1,.a3{
+      left: 56%!important;
+    }
+    figcaption{
+      left: 28%!important;
+    }  
+  }
+// IPAD
+  @media(min-width:768px){
+    .a1,.a3{
+      left: 53%!important;
+    }
+    figcaption{
+      left: 35%!important;
+    }  
+  }
+  /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
+  @media(min-width:1024px){
+    // .a1,.a3{
+    //   left: 60.9%!important;
+    // }
+  }
+
 }
