--- a/src/assets/stylesheets/actuality.scss
+++ b/src/assets/stylesheets/actuality.scss
@@ -98,8 +98,10 @@
       padding: 5px;
 
     }
-
-
+    a{
+      font-family:"Roboto-Bold";
+      font-size: 22.1px;
+    }
     .a3 {
       top: 70.5%;
       // color: red;
@@ -121,7 +123,7 @@
     .a2 {
       top: 39.3%;
       // color: blue;
-      left: 45.8%;
+      left: 45.5%;
       z-index: 4;
       margin-left: auto;
       margin-right: auto;
@@ -176,7 +178,6 @@
       // border: 4px solid green;
       // left: 11%;
       left: 10%;
-
       top: 27%;
       max-width:90%;
       font-size:16px!important;
@@ -265,10 +266,11 @@
     position: relative;
     height: 2%;
   }
-
+//////////////////////////// MEDIA QUERY \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+///galaxy Fold
   @media(width:280px){
     .a1,.a3{
-      left: 67%!important;
+      left: 65.5%!important;
     }
     figcaption{
       left: 6.5%!important;
@@ -289,9 +291,9 @@
     }  
   }
   @media(min-width:375px){
-    // .a1,.a3{
-    //   left: 60.9%!important;
-    // }
+    .a1,.a3{
+      left: 60.5%!important;
+    }
     figcaption{
       left: 17%!important;
     }  
@@ -301,6 +303,10 @@
     .a1,.a3{
       left: 59.2%!important;
     }
+    .a2{
+      left: 45.6%!important;
+    }
+
     figcaption{
       left: 19.5%!important;
     } 
@@ -328,9 +334,41 @@
   }
   /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
   @media(min-width:1024px){
-    // .a1,.a3{
-    //   left: 60.9%!important;
-    // }
+    h1 {
+     font-size: 40px!important;
+    }
+    h2 {
+     font-size: 35px!important;  
+    }
+    article{ 
+      display:inline-block!important;
+      img{
+        margin:10%!important;
+      }
+        .a1{
+          left:19.12%!important;
+          top: 31.5% !important;
+          border:5px double  #d99827!important;
+          border: 5px inset #d99827!important; ;
+        }
+        .a2{
+          margin: 0!important;
+          left: 46% !important;
+          background: transparent!important;
+          border:5px double  #d99827!important;
+          background-color:white!important;
+          top: 31.5% !important;   
+        }
+        .a3{
+          top: 31.5% !important;
+          left: 84%!important;   
+        }
+  // figcaption{
+  //   left: 35%!important;
+  // }
+
+
   }
+}
 
 }
