--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -68,5 +68,12 @@ footer {
     .contactFooter{
       border:3px solid blue ;
     }
+ /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
+     @media(min-width:1024px){
+    
+      p{
+       font-size:2em ;
+     }
+    }  
   }
 }
