--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -49,4 +49,38 @@
     font-family: "Muli-Light";
     font-size:1.5em !important;
   }
+
+
+     // SURFACE DUO
+  @media(min-width:540px){
+    
+  }
+  // IPAD
+  @media(min-width:768px){
+    .burgerMenu {
+      display:none;
+    }
+    li{
+      display: flex!important;
+      color:black;
+      display: flex!important;
+      color:black !important;
+      z-index: 8;
+    }
+    .desktop {
+      display: flex!important;
+      color:black !important;
+      z-index: 8;
+    }
+  } 
+  /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
+  @media(min-width:1024px){
+    // .a1,.a3{
+    //   left: 60.9%!important;
+    // }
+
+  }
+
+  
+
 }
