--- a/src/assets/stylesheets/actuality.css
+++ b/src/assets/stylesheets/actuality.css
@@ -1,5 +1,40 @@
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"), url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"), url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto-Bold";
+  src: local("RobotoBold"), url(../../assets/fonts/Roboto/Roboto-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto-Light";
+  src: local("RobotoLight"), url(../../assets/fonts/Roboto/Roboto-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Peace Sans";
+  src: local("PeaceSans"), url(../../assets/fonts/peace_sans/PeaceSansWebfont.ttf) format("truetype");
+}
+
 .actuality {
-  margin: 2%;
+  margin: 4%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -7,15 +42,10 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border: 4px solid red;
-  font-size: 62.5%;
   position: relative;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -23,21 +53,25 @@
 .actuality section {
   text-align: center;
   max-width: 85vw;
-  background-color: green;
 }
 
 .actuality section h1 {
-  font-size: 1rem;
+  margin-top: 10px;
+  letter-spacing: 1px;
+  font-family: "Roboto-Bold";
+  font-weight: -400;
+  color: #d99827;
 }
 
 .actuality section h2 {
   font-weight: 300;
-  font-style: "Quicksand";
+  font-family: "Roboto-Light";
+  color: black;
   padding-bottom: 10%;
 }
 
 .actuality section .span {
-  color: blue;
+  color: black;
   width: 80%;
   height: 5%;
   border: 15px red solid;
@@ -54,59 +88,117 @@
 }
 
 .actuality figure .imgcard {
-  left: 9%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   text-align: center;
   position: relative;
   z-index: 2;
-  max-width: 80%;
-  max-height: 80%;
-  min-height: 60vh;
   top: 10%;
   border-radius: 4px;
   padding: 5px;
-  background-image: url("../../assets/images/taylor.jpg");
 }
 
 .actuality figure a {
+  font-family: "Roboto-Bold";
+  font-size: 22.1px;
+}
+
+.actuality figure .a3 {
+  top: 70.5%;
   z-index: 3;
-  left: 58%;
-  top: 6%;
+  left: 62.8%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
   position: absolute;
-  background-color: #D99827;
-  opacity: 45%;
+  background-color: #d99827;
+  opacity: 70%;
   text-decoration: none;
   color: white;
-  font-size: 1.2rem;
-  padding: 7px 20px;
+  cursor: pointer;
+  padding: 2%;
+  -webkit-box-shadow: 10px 5px #00000000;
+          box-shadow: 10px 5px #00000000;
 }
 
-.actuality figure a:hover {
-  opacity: 99%;
+.actuality figure .a2 {
+  top: 39.3%;
+  left: 45.5%;
+  z-index: 4;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  position: absolute;
+  background-color: #d99827;
+  opacity: 70%;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  padding: 2%;
+  -webkit-box-shadow: 10px 5px #00000000;
+          box-shadow: 10px 5px #00000000;
 }
 
-.actuality figure a em {
-  color: #D99827;
+.actuality figure .a1 {
+  left: 62.8%;
+  top: 8%;
+  z-index: 4;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  position: absolute;
+  background-color: #d99827;
+  opacity: 70%;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+  padding: 2%;
+  -webkit-box-shadow: 10px 5px #00000000;
+          box-shadow: 10px 5px #00000000;
+}
+
+.actuality figure .a1 em {
+  color: #d99827;
 }
 
 .actuality figure figcaption {
   position: absolute;
-  z-index: 4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 6;
   color: white;
-  border: 4px solid green;
-  left: 25%;
+  left: 10%;
   top: 27%;
+  max-width: 90%;
+  font-size: 16px !important;
+  font-family: "Muli";
+  text-align: center;
 }
 
-.actuality h3, .actuality p, .actuality button {
+.actuality figure .figcaption2 {
+  top: 58%;
+}
+
+.actuality figure .figcaption3 {
+  top: 89.5%;
+}
+
+.actuality h3,
+.actuality p,
+.actuality button {
   text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -114,16 +206,26 @@
 }
 
 .actuality h3 {
-  color: #004AAD;
+  color: black;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 18px !important;
+  color: #356178;
+  font-family: "Muli-ExtraLight";
+}
+
+.actuality h4 {
+  font-family: "Muli-ExtraLight";
+  font-size: 16px !important;
+  text-align: center;
 }
 
 .actuality p {
+  font-size: 16px !important;
   font-weight: 600;
+  font-family: "Muli-ExtraLight";
 }
 
-.actuality button {
+.actuality .button2 {
   background: none;
   color: inherit;
   border: none;
@@ -131,32 +233,187 @@
   cursor: pointer;
   outline: inherit;
   color: #356178;
-  font-size: 0.8rem;
+  font-size: 16px !important;
+  font-family: "Muli-ExtraLight";
+  text-align: center;
+  position: relative;
+  height: 2%;
+  left: 30%;
 }
 
-.actuality .figcaption2 {
-  z-index: 4;
-  position: absolute;
-  left: 25%;
-  top: 60%;
+.actuality .button3 {
+  background: none;
+  color: inherit;
+  border: none;
+  cursor: pointer;
+  outline: inherit;
+  color: #356178;
+  font-size: 16px !important;
+  font-family: "Muli-ExtraLight";
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  left: 30%;
+  position: relative;
+  height: 2%;
 }
 
-.actuality .a2 {
-  left: 46%;
-  top: 70%;
-  z-index: 4;
+.actuality .button1 {
+  background: none;
+  color: inherit;
+  border: none;
+  cursor: pointer;
+  outline: inherit;
+  color: #356178;
+  font-size: 16px !important;
+  font-family: "Muli-ExtraLight";
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  left: 30%;
+  position: relative;
+  height: 2%;
 }
 
-.actuality .figcaption3 {
-  z-index: 4;
-  position: absolute;
-  left: 25%;
-  top: 93%;
+@media (width: 280px) {
+  .actuality .a1, .actuality .a3 {
+    left: 65.5% !important;
+  }
+  .actuality figcaption {
+    left: 6.5% !important;
+    font-size: 12px !important;
+    width: 90% !important;
+  }
+  .actuality p {
+    font-size: 14px !important;
+  }
 }
 
-.actuality .a3 {
-  left: 58%;
-  top: 38%;
-  z-index: 4;
+@media (min-width: 360px) {
+  .actuality .a1, .actuality .a3 {
+    left: 60.9% !important;
+  }
+  .actuality figcaption {
+    left: 16% !important;
+  }
+}
+
+@media (min-width: 375px) {
+  .actuality .a1, .actuality .a3 {
+    left: 60.5% !important;
+  }
+  .actuality figcaption {
+    left: 17% !important;
+  }
+}
+
+@media (min-width: 411px) {
+  .actuality .a1, .actuality .a3 {
+    left: 59.2% !important;
+  }
+  .actuality .a2 {
+    left: 45.6% !important;
+  }
+  .actuality figcaption {
+    left: 19.5% !important;
+  }
+  .actuality h1, .actuality h2 {
+    font-size: 20px !important;
+  }
+}
+
+@media (min-width: 540px) {
+  .actuality .a1, .actuality .a3 {
+    left: 56% !important;
+  }
+  .actuality figcaption {
+    left: 28% !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .actuality .a1, .actuality .a3 {
+    left: 53% !important;
+  }
+  .actuality figcaption {
+    left: 35% !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  .actuality div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .actuality h1 {
+    font-size: 40px !important;
+  }
+  .actuality h2 {
+    font-size: 35px !important;
+  }
+  .actuality h3 {
+    font-size: 26px !important;
+  }
+  .actuality p {
+    font-size: 26px !important;
+  }
+  .actuality h4 {
+    font-size: 22px !important;
+  }
+  .actuality .button1, .actuality .button2, .actuality .button3 {
+    font-size: 28px !important;
+  }
+  .actuality article {
+    display: inline-block !important;
+    width: 30%;
+  }
+  .actuality article h3, .actuality article h4, .actuality article p {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .actuality article img {
+    display: block;
+  }
+  .actuality article .a1 {
+    left: 20.4% !important;
+    top: 24.5% !important;
+  }
+  .actuality article .a2 {
+    left: 45.2% !important;
+    top: 24.5% !important;
+  }
+  .actuality article .a3 {
+    left: 80.5% !important;
+    top: 24.5% !important;
+  }
+  .actuality article figcaption {
+    top: 67% !important;
+    left: 6% !important;
+    font-size: 18px !important;
+  }
+  .actuality article .figcaption2 {
+    left: 36.5% !important;
+  }
+  .actuality article .figcaption3 {
+    left: 66.3% !important;
+  }
 }
 /*# sourceMappingURL=actuality.css.map */
