--- a/src/assets/stylesheets/contact.css
+++ b/src/assets/stylesheets/contact.css
@@ -1,14 +1,31 @@
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+
 .contact {
   font-size: 62.5%;
-  border: 5px solid blueviolet;
+  min-width: 40%;
+  font-family: "Muli-ExtraLight";
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 .contact * {
-  font-size: 1.2em;
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   list-style: none;
+}
+
+.contact ul {
+  width: 40%;
+}
+
+.contact ul a {
+  text-decoration: none;
+  color: black;
 }
 /*# sourceMappingURL=contact.css.map */
