--- a/src/assets/stylesheets/footer.css
+++ b/src/assets/stylesheets/footer.css
@@ -1,45 +1,128 @@
+.homepage {
+  font-size: 62.5%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.homepage * {
+  font-size: 1.2em;
+  padding: 0;
+  margin: 0;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"), url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"), url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+
 footer {
   font-size: 62.5%;
-  border: 3px solid blue;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   text-align: left;
-  margin: 2%;
-  background: pink;
+  margin: 4% 6%;
+  font-family: "Muli-ExtraLight" !important;
+}
+
+footer * {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+}
+
+footer p {
+  font-size: 1.6em;
 }
 
 footer div:nth-child(1) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: 5px solid pink;
-  max-width: 100%;
+  width: 100%;
+  padding-bottom: 4%;
 }
 
 footer div:nth-child(1) p {
-  width: 50%;
+  padding-top: 8%;
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  text-align: left;
 }
 
 footer div:nth-child(1) img {
-  width: 20%;
+  width: 40%;
 }
 
-footer .copyrightNav {
+footer div:nth-child(2) {
+  height: 100%;
+  width: 100%;
+  border-top: 1px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
 }
 
-footer li {
-  font-size: 1.4rem;
+footer div:nth-child(2) .copyright {
+  width: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-footer .Nav_links {
+footer div:nth-child(2) .Nav {
+  padding-top: 4%;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 100%;
+  width: 50%;
   list-style-type: none;
+}
+
+footer div:nth-child(2) .Nav li:nth-child(n) {
+  padding-bottom: 5%;
+  font-size: 1.6em;
+}
+
+footer div:nth-child(2) .Nav a {
+  text-decoration: none;
+  color: black;
+}
+
+footer div:nth-child(2) .contactFooter {
+  border: 3px solid blue;
+}
+
+@media (min-width: 1024px) {
+  footer div:nth-child(2) p {
+    font-size: 2em;
+  }
 }
 /*# sourceMappingURL=footer.css.map */
