--- a/src/assets/stylesheets/nav.css
+++ b/src/assets/stylesheets/nav.css
@@ -3,38 +3,30 @@
   src: local("MuliLight"), url(../../assets/fonts/muli/Muli-Light.ttf) format("truetype");
 }
 
-.LinkNav {
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"), url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+
+.BurgerLink {
   font-size: 62.5%;
-  border: 4px solid #fcd708;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: 10;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  top: 0 !important;
-  left: 0 !important;
+  z-index: 10;
 }
 
-.LinkNav .Nav_links {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.LinkNav .burgerMenu {
-  border: 1px solid red;
+.BurgerLink .burgerMenu {
   margin: 10px;
 }
 
-.LinkNav .burgerMenu div {
+.BurgerLink .burgerMenu div {
   min-height: 2px;
   min-width: 23px;
   border-radius: 2px;
@@ -43,14 +35,14 @@
   cursor: pointer;
 }
 
-.LinkNav a:link {
+.BurgerLink a {
   font-family: "Muli-Light";
   text-decoration: none;
   color: black;
-  font-size: 10px;
+  font-size: 1.5em;
 }
 
-.LinkNav .Nav_links {
+.BurgerLink .Links {
   -webkit-transition: all 0.8s ease-out;
   transition: all 0.8s ease-out;
   display: -webkit-box;
@@ -66,5 +58,33 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  list-style: none;
+}
+
+.BurgerLink .contacts a {
+  font-family: "Muli-Light";
+  font-size: 1.5em !important;
+}
+
+@media (min-width: 768px) {
+  .BurgerLink .burgerMenu {
+    display: none;
+  }
+  .BurgerLink li {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    color: black;
+    display: flex !important;
+    color: black !important;
+    z-index: 8;
+  }
+  .BurgerLink .desktop {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    color: black !important;
+    z-index: 8;
+  }
 }
 /*# sourceMappingURL=nav.css.map */
